# socket.io-request-py

./: README.md  setup.cfg
socketio_request/: __init__.py
