[metadata]
name = socketio_request
version = attr:socket_request.__version__
author = TANAKA Makoto
author_email = 45248369+TANAKA-Makoto@users.noreply.github.com
description = python socket.io client package for socket.io-request
long_description = file:README.md
url = https://github.com/TANAKA-Makoto/socket.io-request-py
license = MIT

[options]
zip_safe = False
packages = find:
install_requires =
  socketIO-client-nexus
entry_points = file: entry_points.cfg